adição de estilização

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="teste.css">
+
 </head>
 <body>
 
@@ -38,7 +39,7 @@
       </span>
     
       <!-- Título -->
-      <h3 class="titulo">RHFacilita</h3>
+      <h3 class="titulo"">RHFacilita</h3>
     
       <!-- Usuário -->
       <div class="d-flex align-items-center user-info">
@@ -58,7 +59,8 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-cogs fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Processo de organização</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Processo de organização</div>
+            </a>
             <p class="shortcut-description text-muted">Definição de missão, visão e valores para alinhar a equipe.</p>
           </div>
         </div>
@@ -67,7 +69,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-bullseye fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Planejamento estratégico</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Planejamento estratégico</div></a>
             <p class="shortcut-description text-muted">Definição de metas e estratégias para os objetivos de longo prazo.</p>
           </div>
         </div>
@@ -76,7 +78,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-sitemap fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Estrutura organizacional</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Estrutura organizacional</div></a>
             <p class="shortcut-description text-muted">Organização hierárquica e responsabilidades da empresa.</p>
           </div>
         </div>
@@ -87,7 +89,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-chart-line fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Planejamento estratégico</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Planejamento estratégico</div></a>
             <p class="shortcut-description text-muted">Definição de metas e estratégias para alcançar os objetivos de longo prazo da empresa.</p>
           </div>
         </div>
@@ -96,7 +98,8 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-user-check fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Recrutamento e seleção por competências</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Recrutamento e seleção por competências</div>
+            </a>
             <p class="shortcut-description text-muted">Seleção de candidatos com habilidades e atitudes alinhadas à empresa.</p>
           </div>
         </div>
@@ -105,7 +108,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-bullhorn fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Plano de endomarketing</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Plano de endomarketing</div></a>
             <p class="shortcut-description text-muted">Estratégias internas para engajar e motivar os colaboradores.</p>
           </div>
         </div>
@@ -116,7 +119,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-user-times fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Gestão de desligamento</div>
+            <a href="#" style="text-decoration: none;"> <div class="shortcut-title font-weight-bold">Gestão de desligamento</div></a>
             <p class="shortcut-description text-muted">Processo de desligamento de colaboradores com suporte adequado.</p>
           </div>
         </div>
@@ -125,7 +128,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-smile fa-2x mb-3 gold-icon"></i>
-            <div class="shortcut-title font-weight-bold">Gestão de clima</div>
+            <a href="#" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Gestão de clima</div> </a>
             <p class="shortcut-description text-muted">Avaliação da satisfação e motivação dos colaboradores no ambiente de trabalho.</p>
           </div>
         </div>
