adição de dashboards

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a style="text-decoration: none;" href="recrutamento.html"><li><i class="fas fa-user-plus mr-2"></i> Recrutamento e Seleção</li> </a>
       <li><i class="fas fa-users mr-2"></i> Equipes e Departamentos</li>
       <li><i class="fas fa-heart mr-2"></i> Endomarketing</li>
-      <li><i class="fas fa-chart-pie mr-2"></i> Relatórios de RH</li>
+      <a href="dashboard.html" style="text-decoration: none;"><li><i class="fas fa-chart-pie mr-2"></i> Relatórios de RH</li></a>
       <li><i class="fas fa-cogs mr-2"></i> Configurações</li>
     </ul>
   </nav>
