implementação do modal

--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
          
         <nav id="sidebar" class="sidebar">
             <div class="text-center py-4">
-                <img src="https://www.figueiralaser.com.br//site/fotoTexturaMaterial?id_recorte_personalizado=3798&id_materia_prima=9299&tamanho=500x500" alt="Logo" width="50" height="50">
+                <img src="WhatsApp Image 2024-11-17 at 00.00.48.jpeg" alt="Logo" width="100" height="50">
             </div>
             <ul>
                 <a style="text-decoration: none;" href="index.html"><li class="active"><i class="fas fa-home mr-2"></i> Página inicial</li></a>
