--- a/processos_seletivos/processos_seletivos.html
+++ b/processos_seletivos/processos_seletivos.html
@@ -55,7 +55,7 @@
               <div class="col-md-4 mb-3">
                 <div class="shortcut-card p-3">
                   <i class="fas fa-user-plus fa-2x mb-3 gold-icon"></i>
-                  <a href="../ainda_em_desenvolvimento.html" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Criar Vaga</div>
+                  <a href="criar_vaga.html" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Criar Vaga</div>
                   </a>
                   <p class="shortcut-description text-muted">Crie ou edite novas vagas de empregos. </p>
                 </div>
