criação do endomarketing

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="processos_seletivos/processos_seletivos.html" style="text-decoration: none;"><li><i class="fas fa-clipboard-list mr-2"></i> Processos seletivos</li></a>
       <a style="text-decoration: none;" href="recrutamento.html"><li><i class="fas fa-user-plus mr-2"></i> Recrutamento e Seleção</li> </a>
       <li><i class="fas fa-users mr-2"></i> Equipes e Departamentos</li>
-      <li><i class="fas fa-heart mr-2"></i> Endomarketing</li>
+      <a href="endomarketing.html" style="text-decoration: none;"><li><i class="fas fa-heart mr-2"></i> Endomarketing</li></a>
       <a href="dashboard.html" style="text-decoration: none;"><li><i class="fas fa-chart-pie mr-2"></i> Relatórios de RH</li></a>
       <li><i class="fas fa-cogs mr-2"></i> Configurações</li>
     </ul>
@@ -108,7 +108,7 @@
         <div class="col-md-4 mb-3">
           <div class="shortcut-card p-3">
             <i class="fas fa-bullhorn fa-2x mb-3 gold-icon"></i>
-            <a href="ainda_em_desenvolvimento.html" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Plano de endomarketing</div></a>
+            <a href="endomarketing.html" style="text-decoration: none;"><div class="shortcut-title font-weight-bold">Plano de endomarketing</div></a>
             <p class="shortcut-description text-muted">Estratégias internas para engajar e motivar os colaboradores.</p>
           </div>
         </div>
